<resources>
    <string name="app_name">DePin</string>
    <!-- Strings related to login -->
    <string name="name">Nama</string>
    <string name="email">Alamat Email</string>
    <string name="password">Kata Sandi</string>
    <string name="id_number">No Identitas</string>
    <string name="telp_number">No Telepon</string>
    <string name="prompt_name">Masukkan Nama</string>
    <string name="prompt_email">Masukkan Alamat Email</string>
    <string name="prompt_password">Masukkan Kata Sandi</string>
    <string name="prompt_id_number">Masukkan Nomor Identitas</string>
    <string name="prompt_telp_number">Masukkan Nomor Telepon</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_register">Daftar</string>
    <string name="action_account_register">Daftar Akun</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="invalid_name">Nama tidak boleh kosong</string>
    <string name="invalid_email">Bukan alamat email yang valid</string>
    <string name="invalid_password">Password Harus Lebih Dari 5 Karakter</string>
    <string name="invalid_id_number">Nomor Identitas Harus 16 Karakter</string>
    <string name="invalid_phone_number">Nomor Handphone Harus Diawali Angka 0</string>
    <string name="wrong_username_password">Username/Password Salah</string>
    <string name="login_failed">"Login Gagal"</string>
    <string name="register_failed">"Daftar Gagal"</string>
    <string name="register_success">"Daftar Berhasil"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="category">Kategori</string>
    <string name="economy">Ekonomi</string>
    <string name="business">Bisnis</string>
    <string name="executive">Eksekutif</string>
    <string name="nearest_scedhule">Jadwal Terdekat</string>
    <string name="booking_information">Informasi Pemesanan</string>
    <string name="from">Dari</string>
    <string name="to">Ke</string>
    <string name="day_date">Hari, Tanggal</string>
    <string name="departure">Berangkat</string>
    <string name="passengers">Penumpang</string>
    <string name="ship_class">Kelas</string>
    <string name="book">Pesan</string>
    <string name="payment_information">Informasi Pembayaran</string>
    <string name="bca">Bank BCA (Dicek Otomatis)</string>
    <string name="account_number">No. Rekening : </string>
    <string name="copy">Salin</string>
    <string name="payment_checked">Dicek dalam 10 menit setelah pembayaran berhasil</string>
    <string name="payment_amount">Jumlah Pembayaran</string>
    <string name="pay">Bayar</string>

    <string-array name="city">
        <item>Tangerang</item>
        <item>Lampung</item>
    </string-array>

</resources>