<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mohamadrizki.depin.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_pemesananActivity"
            app:destination="@id/pemesananActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.mohamadrizki.depin.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.mohamadrizki.depin.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <activity
        android:id="@+id/pemesananActivity"
        android:name="com.mohamadrizki.depin.ui.pemesanan.PemesananActivity"
        android:label="activity_pemesanan"
        tools:layout="@layout/activity_pemesanan" />
</navigation>